# mrkl

./: .env  Cargo.toml  IMPLEMENTATION.md  README.md  TODO.md  consistency.md  design_simplified.md  reset.ps1
examples/: monitor.rs  post.rs
src/: client.rs  lib.rs  merkle_state.rs  routes.rs  test_client.rs  tree.rs
src/scripts/: database.sql  serial_processing.sql
src/service/: client.rs  metrics.rs  mod.rs  processor.rs  responses.rs  routes.rs  server.rs  state.rs  validation.rs
tests/: basic.rs  test_client.rs
