[package]
name = "mrkl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
dashmap = "6.0"
chrono = "0.4"
sha2 = "0.10.8"
dotenv = "0.15.0"
anyhow = "1.0.82" # For simple error handling in our binaries
axum = { version = "0.7", features = ["json", "macros"] }
serde_json = "1.0"
parking_lot = "0.12"
ct-merkle = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
digest = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serial_test = "3.2.0"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }

# Define our binaries
[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "load"
path = "src/bin/load.rs"
