[package]
name = "mrkl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
dashmap = "6.0"
chrono = "0.4"
sha2 = "0.10.8"
dotenv = "0.15.0"
anyhow = "1.0.82" # For simple error handling in our binaries
axum = { version = "0.7", features = ["json", "macros"] }
serde_json = "1.0"
parking_lot = "0.12"
ct-merkle = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
digest = "0.10"
reqwest = { version = "0.11", features = ["json"] }
serial_test = "3.2.0"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Define our binaries
[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "load"
path = "src/bin/load.rs"

[lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"
private_interfaces = "deny"
private_bounds = "deny"
unnameable_types = "deny"
# https://github.com/taiki-e/cargo-llvm-cov?tab=readme-ov-file#exclude-code-from-coverage
# unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[lints.clippy]
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
doc_markdown = "deny"
unwrap_used = "deny"
disallowed_macros = "deny"
shadow_unrelated = "deny"
cognitive_complexity = "deny"
# arithmetic_side_effects = "deny"
print_stdout = "deny"
print_stderr = "deny"
# groups, not a single lint
suspicious = "deny"
complexity = "deny"
style = "deny"
perf = "deny"
# pedantic = "deny"